--- a/info/templates/info/index.html
+++ b/info/templates/info/index.html
@@ -1,29 +1,13 @@
-{% extends "admin/base_site.html" %}
-{% load i18n admin_static %}
+{% extends "site_base.html" %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/dashboard.css" %}" />{% endblock %}
-
-{% block coltype %}colMS{% endblock %}
-
-{% block bodyclass %}dashboard{% endblock %}
-
-{% block breadcrumbs %}{% endblock %}
-
-{% block content %}
+{% block body %}
 <div id="content-main">
-
 {% if latest_list %}
-    {% for poll in latest_list %}
-    	<div class="app-{{ app.app_label }} module">
-    	<table>
-    	<caption>
-            <a href="{{ app.app_url }}" class="section" >
-				{% blocktrans with name=poll.title %} {{poll}} {% endblocktrans %}
-            </a>
-        </caption>
-         <tr class="model-{{ model.object_name|lower }}">
-         </tr>
-    	</table>
+    {% for info in latest_list %}
+    	<div class="col-md-8 col-md-offset-2">
+	    	<h2><a href="{% url "info.detail" info.pk%}">{{info}}</a></h2>
+	    	<h6>{{info.content|truncatechars:200}}</h6>
+	    	<hr>
     	</div>
     {% endfor %}
 {% else %}
