--- a/info/templates/info/detail.html
+++ b/info/templates/info/detail.html
@@ -20,7 +20,7 @@
 	   	</div>
 	   	<hr>
 	   	<div class="col-md-12 text-right">
-			发布时间： {{ info.pub_date|date:"D d M Y" }}			
+			发布时间： {{ info.pub_date|date:"Y M d" }}			
 		</div>
    	</div>
 </div>
