--- a/info/templates/info/detail.html
+++ b/info/templates/info/detail.html
@@ -17,7 +17,7 @@
 	   		<h2>{{info}}</h2>
 		</div>
 	   	<div class="row">
-	   		<pre>{{info.content}}</pre>
+	   		<pre style="background-color:white">{{info.content}}</pre>
 	   	</div>
 	   	<div class="col-md-12 text-right">
 			发布时间： {{ info.pub_date|date:"Y M d" }}			
