--- a/info/templates/info/detail.html
+++ b/info/templates/info/detail.html
@@ -3,14 +3,15 @@
 {% block body %}
 <div id="content-main">
    	<div class="col-md-10 col-md-offset-1">
-		<div class="row">
-			<div class="col-md-6">
-		   		<a href="{% url "info.index" %}" class="btn btn-danger large">返回</a>
-				<a href="{% url "info.index" %}" class="btn btn-info">
-					地区：{{info.info_area}} <span class="badge">42</span>
+		<div id="navi" class="row">
+		   		<a href="{{from_url}}" class="btn btn-danger large">返回</a>
+		   		<!-- 分类信息 -->
+		    	<a href="{% url "info.by_area" info.info_area.pk 1 %}" class="btn btn-info">
+		    		地区：{{info.info_area}} <span class="badge">{{area_num}}</span>
+		    	</a>
+				<a href="{% url "info.by_class" info.info_class.pk 1 %}" class="btn btn-info">
+					类别：{{info.info_class}} <span class="badge">{{class_num}}</span>
 				</a>
-				<a href="{% url "info.index" %}" class="btn btn-info">类别：{{info.info_class}}</a>
-			</div>
 		</div>
 		<br>
 	   	<div class="row">
