--- a/info/templates/info/detail.html
+++ b/info/templates/info/detail.html
@@ -22,8 +22,8 @@
 	   	</div>
 	   	
 	   	<div class="row">
-	   		<a class="btn btn-info btn-xs ">访问次数：<span class="badge">{{info.view_times}}</span></a>
-	   		<a class="btn btn-info btn-xs pull-right">发布时间：{{info.pub_date|date:"Y M d"}}</a>
+	   		<a class="btn btn-info btn-xs" disabled="disabled">访问次数：<span class="badge">{{info.view_times}}</span></a>
+	   		<a class="btn btn-info btn-xs pull-right" disabled="disabled">发布时间：{{info.pub_date|date:"Y M d"}}</a>
 		</div>
    	</div>
 </div>
