--- a/info/templates/info/list.html
+++ b/info/templates/info/list.html
@@ -13,7 +13,8 @@
 		<a href="{% url "info.by_class" info.info_class.pk 1 %}" class="btn btn-info btn-xs">类别：{{info.info_class}}</a>
 		
 		<!-- view times -->
-		<a class="btn btn-info btn-xs pull-right">访问次数：<span class="badge">{{info.view_times}}</span></a>
+		<a class="btn btn-info btn-xs pull-right" disabled="disabled">访问次数：<span class="badge" >{{info.view_times}}</span></a>
+		<a class="btn btn-info btn-xs pull-right" style="margin-right:5px" disabled="disabled">发布时间：{{info.pub_date|date:"Y M d"}}</a>
     	<hr>
    	</div>
     {% endfor %}
