filter html tags

--- a/info/templates/info/detail.html
+++ b/info/templates/info/detail.html
@@ -18,7 +18,7 @@
 	   		<h2>{{info}}</h2>
 		</div>
 	   	<div class="row">
-	   		<pre style="background-color:white">{{info.content}}</pre>
+	   		<pre style="background-color:white">{{info.content|striptags}}</pre>
 	   	</div>
 	   	
 	   	<div class="row">
