--- a/info/templates/info/list.html
+++ b/info/templates/info/list.html
@@ -6,7 +6,7 @@
     {% for info in info_list %}
    	<div class="col-md-8 col-md-offset-2">
     	<a href="{% url "info.detail" info.pk request.path %}" class="btn btn-default"><h4>{{info}}</h4></a>
-    	<h6>{{info.content|truncatechars:200}}</h6>
+    	<h6>{{info.content|striptags|truncatechars:200}}</h6>
     	
     	<!-- 分类信息 -->
     	<a href="{% url "info.by_area" info.info_area.pk 1 %}" class="btn btn-info btn-xs">地区：{{info.info_area}}</a>
