--- a/info/templates/info/list.html
+++ b/info/templates/info/list.html
@@ -1,7 +1,18 @@
 {% extends "site_base.html" %}
 
 {% block body %}
+
 <div id="content-main">
+	<!-- search -->
+   	<div class="col-md-8 col-md-offset-2" style="margin-top:-30px;margin-bottom:40px">
+   		<div class="pull-right">
+	   		<form class="form-inline" role="form" action="{% url "info.search" %}">
+			    <input type="text" class="form-control" id="q" name="q" placeholder="enter key words">
+				<button type="submit" class="btn btn-default">search</button>
+			</form>
+	   	</div>
+   	</div>
+   	
 	<!-- info 列表 -->
     {% for info in info_list %}
    	<div class="col-md-8 col-md-offset-2">
