--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -10,6 +10,15 @@
     {% block extra_style %}{% endblock %}
 {% endblock %}
 
+{% block site_brand %}
+<ul class="nav navbar-nav">
+	<p class="navbar-text" style="margin-top:10px;margin-bottom:10px">
+	<a href="{% url "info.index" %}" class="btn btn-success" style="width:100px">主页</a>
+	</p>
+</ul>
+{% endblock %}
+
+{% block account_bar %}{% include "_account_bar.html" %}{% endblock %}
 
 {% block body%}
 {% endblock %}
