--- a/info/templates/info/list.html
+++ b/info/templates/info/list.html
@@ -4,9 +4,15 @@
 
 <div id="content-main">
 	<!-- search -->
+	
    	<div class="col-md-8 col-md-offset-2" style="margin-top:-30px;margin-bottom:40px">
    		<div class="pull-right">
 	   		<form class="form-inline" role="form" action="{% url "info.search" %}">
+	   			{% csrf_token %}
+	   			{{ form.non_field_errors }}
+		        {{ form.subject.errors }}
+		        <label for="id_q"></label>
+		        {{ form.q }}
 			    <input type="text" class="form-control" id="q" name="q" placeholder="enter key words">
 				<button type="submit" class="btn btn-default">search</button>
 			</form>
