--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -13,7 +13,7 @@
 {% block site_brand %}
 <ul class="nav navbar-nav">
 	<p class="navbar-text" style="margin-top:10px;margin-bottom:10px">
-	<a href="{% url "info.index" %}" class="btn btn-success" style="width:100px">主页</a>
+	<a href="{% url "info.index" %}" class="btn btn-success" style="width:100px"><span class="glyphicon glyphicon-home"></span>&nbsp;&nbsp;主页</a>
 	</p>
 </ul>
 {% endblock %}
