--- a/info/templates/info/list.html
+++ b/info/templates/info/list.html
@@ -16,7 +16,7 @@
    	
 	<!-- info 列表 -->
    	<div class="col-md-7">
-    {% for info in info_list %}
+	    {% for info in page %}
     	<a href="{% url "info.detail" info.pk request.path %}" class="btn btn-default"><h4>{{info}}</h4></a>
     	<h6>{{info.content|striptags|truncatechars:200}}</h6>
     	
@@ -28,55 +28,38 @@
 		<a class="btn btn-warning btn-xs pull-right" disabled="disabled">访问次数：<span class="badge" >{{info.view_times}}</span></a>
 		<a class="btn btn-warning btn-xs pull-right" style="margin-right:5px" disabled="disabled">发布时间：{{info.pub_date|date:"Y M d"}}</a>
     	<hr>
-    {% endfor %}
+	    {% endfor %}
    	</div>
    	
-   	<div class="col-md-4 pull-right">
-    {% for info in info_list %}
-    	<a href="{% url "info.detail" info.pk request.path %}"><h4>{{info}}</h4></a>
-    	<h6>{{info.content|striptags|truncatechars:200}}</h6>
-    	
-    	<!-- 分类信息 -->
-    	<a href="{% url "info.by_area" info.info_area.pk 1 %}" class="btn btn-info btn-xs">地区：{{info.info_area}}</a>
-		<a href="{% url "info.by_class" info.info_class.pk 1 %}" class="btn btn-info btn-xs">类别：{{info.info_class}}</a>
-		
-		<!-- view times -->
-		<a class="btn btn-warning btn-xs pull-right" disabled="disabled">访问次数：<span class="badge" >{{info.view_times}}</span></a>
-		<a class="btn btn-warning btn-xs pull-right" style="margin-right:5px" disabled="disabled">发布时间：{{info.pub_date|date:"Y M d"}}</a>
-    	<hr>
-    {% endfor %}
-   	</div>
-   	
-    
     <!-- 分页 -->
     <div id="pagination" class="col-md-8 col-md-offset-2">
 		<ul class="pagination">
 		
 		<!-- index page -->
 		{% if query_id == None %}
-			<li><a href="{% url url_name prev_page %}">&laquo;</a></li>
-			{% for idx in page_range %}
+			{% if page.has_previous %}<li><a href="{% url url_name page.previous_page_number %}">&laquo;</a></li>{% endif %}
+			{% for idx in paginator.page_range %}
 				<!-- 是否为选中状态 -->
-				{% if curr_page == idx %}
+				{% if page.number == idx %}
 				<li class="active"><a href="{% url url_name idx %}">{{idx}}</a></li>
 				{% else %}
 				<li><a href="{% url url_name idx %}">{{idx}}</a></li>
 				{% endif %}
 			{% endfor %}
-			<li><a href="{% url url_name next_page %}">&raquo;</a></li>
+   	        {% if page.has_next %}<li><a href="{% url url_name page.next_page_number %}">&raquo;</a></li>{% endif %}
 		
 		<!-- query page -->
 		{% else %}
-			<li><a href="{% url url_name query_id prev_page %}">&laquo;</a></li>
-			{% for idx in page_range %}
+			{% if page.has_previous %}<li><a href="{% url url_name query_id page.previous_page_number %}">&laquo;</a></li>{% endif %}
+			{% for idx in paginator.page_range %}
 				<!-- 是否为选中状态 -->
-				{% if curr_page == idx %}
+				{% if page.number == idx %}
 				<li class="active"><a href="{% url url_name query_id idx %}">{{idx}}</a></li>
 				{% else %}
 				<li><a href="{% url url_name query_id idx %}">{{idx}}</a></li>
 				{% endif %}
 			{% endfor %}
-			<li><a href="{% url url_name query_id next_page %}">&raquo;</a></li>
+   	        {% if page.has_next %}<li><a href="{% url url_name query_id page.next_page_number %}">&raquo;</a></li>{% endif %}
 		{% endif %}
 		</ul>
 	</div>
