--- a/info/templates/search/search.html
+++ b/info/templates/search/search.html
@@ -2,24 +2,20 @@
 
 {% block body %}
 
+
 <div id="content-main">
 	<!-- search -->
    	<div class="col-md-8 col-md-offset-2" style="margin-top:-30px;margin-bottom:40px">
-   		<div class="pull-right">
-	   		<form class="form-inline" role="form" action="{% url "info.search" %}">
-			    <input type="text" class="form-control" id="q" name="q" placeholder="enter key words" value="{{ query }}"/>
-				<button type="submit" class="btn btn-default">search</button>
-			</form>
-	   	</div>
+   		{% include "info/_search.html" %}
    	</div>
    	
 	<!-- info 列表 -->
-    {% for result in page.object_list %}
    	<div class="col-md-8 col-md-offset-2">
+    	{% for result in page.object_list %}
     	<a href="{% url "info.detail" result.object.pk request.path %}" class="btn btn-default">{{ result.title|safe }}</a>
     	<hr>
+    	{% endfor %}
    	</div>
-    {% endfor %}
     
     
     
