--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -7,6 +7,7 @@
 {% block style_base %}
     <link href="{% static "pinax/css/theme.css" %}" rel="stylesheet">
     <link href="{% static "css/site.css" %}" rel="stylesheet">
+    <link href="{% static "css/docs.css" %}" rel="stylesheet">
     {% block extra_style %}{% endblock %}
 {% endblock %}
 
