--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -1,8 +1,7 @@
-{% extends "theme_base.html" %}
+{% extends "theme_bootstrap/base.html" %}
 
 {% load staticfiles %}
 {% load i18n %}
-
 
 {% block style_base %}
     <link href="{% static "pinax/css/theme.css" %}" rel="stylesheet">
@@ -19,7 +18,23 @@
 </ul>
 {% endblock %}
 
-{% block account_bar %}{% include "_account_bar.html" %}{% endblock %}
+{% block nav %}
+	{% include "_navi.html" %}
+	
+	{% include "_account_bar.html" %}
+	
+	<!-- search -->
+	<form class="navbar-form navbar-right" role="search" action="{% url "info.search" %}">
+	    <input type="text" class="form-control" id="q" name="q" placeholder="enter key words" value="{{ query }}"/>
+		<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+	</form>
+{% endblock %}
+
+
+
+{% block account_bar %}
+{% comment %} 放在上面 {% endcomment %}
+{% endblock %}
 
 {% block body%}
 {% endblock %}
