--- a/info/templates/search/search.html
+++ b/info/templates/search/search.html
@@ -1,8 +1,6 @@
-{% extends 'site_base.html' %}
+{% extends 'info_base.html' %}
 
 {% block body %}
-
-
 <div id="content-main">
 	<!-- info 列表 -->
    	<div class="col-md-8 col-md-offset-2">
