--- a/info/templates/_account_bar.html
+++ b/info/templates/_account_bar.html
@@ -6,7 +6,12 @@
 	<li class="dropdown">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {% user_display request.user %} <span class="caret"></span></a>
 		<ul class="dropdown-menu" role="menu">
+			<li><a href="{% url 'info.fav_list' 1 %}"><i class="fa fa-cog"></i> {% trans "我的收藏" %}</a></li>
 			<li><a href="{% url 'account_settings' %}"><i class="fa fa-cog"></i> {% trans "Settings" %}</a></li>
+		   	{% if request.user.is_staff %}
+                <li><a href="{% url THEME_ADMIN_URL|default:"admin:index" %}"><i class="fa fa-cog"></i> {% trans "Admin" %}</a></li>
+            {% endif %}
+			<li class="divider"></li>
 			<li><a id="account_logout" href="{% url 'account_logout' %}"><i class="fa fa-power-off"></i> {% trans "Log out" %}</a></li>
 		</ul>
 	</li>
