--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -1,10 +1,11 @@
-{% extends "theme_bootstrap/base.html" %}
+{% extends "theme_bootstrap_base.html" %}
 
 {% load staticfiles %}
 {% load i18n %}
 
 {% block extra_head %}
     <meta property="wb:webmaster" content="e88fc22b95ef9ad5" />
+    <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
 
 {% block style_base %}
