--- a/info/templates/info/detail.html
+++ b/info/templates/info/detail.html
@@ -4,6 +4,7 @@
 <div id="content-main">
    	<div class="col-md-10 col-md-offset-1">
 		<div id="navi" class="row">
+            {{from_url}}
 	   		<a href="{{from_url}}" class="btn btn-danger large">
 	   			<span class="glyphicon glyphicon-arrow-left"></span>&nbsp;&nbsp;返回
 	   		</a>
