--- a/info/templates/search/search.html
+++ b/info/templates/search/search.html
@@ -10,26 +10,29 @@
     	</div>
     	{% endfor %}
    	</div>
-    
-    
-    
+
     <!-- 分页 -->
     {% if page.object_list %}
     <div id="pagination" class="col-md-8 col-md-offset-2">
 		<ul class="pagination">
 			{% if page.has_previous %}<li><a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">&laquo;</a></li>{% endif %}
-			<li><a>Page {{ page.number }} of {{ paginator.num_pages }}</a></li>
-			
-			{% comment %}  
-			{% for idx in paginator.page_range %}
-				<!-- 是否为选中状态 -->
-				{% if page.number == idx %}
-				<li class="active"><a href="?q={{ query }}&amp;page={{ idx }}">{{ idx }}</a></li>
-				{% else %}
-				<li><a href="?q={{ query }}&amp;page={{ idx }}">{{ idx }}</a></li>
-				{% endif %}
-			{% endfor %}
-			{% endcomment %}
+
+            <li>
+            <div class="btn-group dropup" style="display: inline;">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                Page {{ page.number }} of {{ paginator.num_pages }} <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                    {% for idx in paginator.page_range %}
+                        {% if page.number == idx %}
+                        <li class="active"><a href="?q={{ query }}&amp;page={{ idx }}">{{ idx }}</a></li>
+                        {% else %}
+                        <li><a href="?q={{ query }}&amp;page={{ idx }}">{{ idx }}</a></li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            </div>
+            </li>
 			
    	        {% if page.has_next %}<li><a href="?q={{ query }}&amp;page={{ page.next_page_number }}">&raquo;</a></li>{% endif %}
 		</ul>
