--- a/info/templates/info/fav_list.html
+++ b/info/templates/info/fav_list.html
@@ -13,18 +13,23 @@
 		<ul class="pagination">
 		{% with url_name="info.fav_list" %}
 			{% if page.has_previous %}<li><a href="{% url url_name page.previous_page_number %}">&laquo;</a></li>{% endif %}
-			<li><a>Page {{ page.number }} of {{ paginator.num_pages }}</a></li>
-			
-			{% comment %}  
-			{% for idx in paginator.page_range %}
-				<!-- 是否为选中状态 -->
-				{% if page.number == idx %}
-				<li class="active"><a href="{% url url_name idx %}">{{idx}}</a></li>
-				{% else %}
-				<li><a href="{% url url_name idx %}">{{idx}}</a></li>
-				{% endif %}
-			{% endfor %}
-			{% endcomment %}
+
+            <li>
+            <div class="btn-group dropup" style="display: inline;">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                Page {{ page.number }} of {{ paginator.num_pages }} <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                    {% for idx in paginator.page_range %}
+                        {% if page.number == idx %}
+                        <li class="active"><a href="{% url url_name idx %}">{{idx}}</a></li>
+                        {% else %}
+                        <li><a href="{% url url_name idx %}">{{idx}}</a></li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            </div>
+            </li>
 			
    	        {% if page.has_next %}<li><a href="{% url url_name page.next_page_number %}">&raquo;</a></li>{% endif %}
    	    {% endwith %}
