--- a/info/templates/info/_info_list.html
+++ b/info/templates/info/_info_list.html
@@ -17,17 +17,22 @@
         </a>
     {% endif %}
 
-    {% comment %}分享到微博{% endcomment %}
+    {% comment %}分享到微博
     {% with content=info|truncatechars:"80" %}
         <wb:share-button appkey="11psLc" addition="simple" type="button" default_text="{{ content }}" class="pull-right" ></wb:share-button>
     {% endwith %}
+    {% endcomment %}
 
     <h6>{{info.content|striptags|truncatechars:200}}</h6>
 
     <!-- 分类信息 -->
-    {% if info.info_area %}
-        <a href="{% url "info.by_area" info.info_area.pk 1 %}" class="btn btn-info btn-xs">地区：{{info.info_area}}</a>
-        <a href="{% url "info.by_class" info.info_class.pk 1 %}" class="btn btn-info btn-xs">类别：{{info.info_class}}</a>
+    {% if info.work_location %}
+
+        {% comment %}
+        多对多的关系，需要特殊处理
+        <a href="{% url "info.by_location" info.work_location.pk 1 %}" class="btn btn-info btn-xs">地区：{{info.work_location}}</a>
+        {% endcomment %}
+        <a href="{% url "info.by_category" info.work_category.pk 1 %}" class="btn btn-info btn-xs">类别：{{info.work_category}}</a>
 
         <a class="btn btn-default btn-xs pull-right" disabled="disabled">访问次数：{{info.view_times}}</a>
         <a class="btn btn-default btn-xs pull-right" style="margin-right:5px" disabled="disabled">发布时间：{{info.pub_date|date:"Y M d"}}</a>
