--- a/info/templates/info/detail.html
+++ b/info/templates/info/detail.html
@@ -8,14 +8,21 @@
 	   			<span class="glyphicon glyphicon-arrow-left"></span>&nbsp;&nbsp;返回
 	   		</a>
 	   		<!-- 分类信息 -->
-	    	<a href="{% url "info.by_area" info.info_area.pk 1 %}" class="btn btn-info">
-	    		地区：{{info.info_area}} <span class="badge">{{area_num}}</span>
+
+            {% comment %}
+            地区信息需要特殊处理
+	    	<a href="{% url "info.by_location" info.work_location.pk 1 %}" class="btn btn-info">
+	    		地区：{{info.work_location}} <span class="badge">{{ location_num }}</span>
 	    	</a>
-			<a href="{% url "info.by_class" info.info_class.pk 1 %}" class="btn btn-info">
-				类别：{{info.info_class}} <span class="badge">{{class_num}}</span>
-			</a>
-			
-			<!-- 收藏信息 -->
+            <a href="{% url "info.by_category" info.first_category.pk 1 %}" class="btn btn-info">
+            类别：{{info.first_category}} <span class="badge">{{category_num}}</span>
+            </a>
+	    	{% endcomment %}
+            <a href="{% url "info.by_category" info.work_category.pk 1 %}" class="btn btn-info">
+                类别：{{info.work_category.parent}} >> {{ info.work_category }}
+            </a>
+
+            <!-- 收藏信息 -->
 			{% if favouriteInfo %}
 			<a href="{% url "info.rm_fav" info.pk request.path %}" class="btn btn-default pull-right" 
 				data-toggle="tooltip" data-placement="top" title="点击取消">
@@ -39,11 +46,52 @@
 		<br>
 	   	<div class="row">
    			<h2>{{ info.title }}</h2>
+            <table class="table table-condensed">
+                <thead>
+                    <tr>
+                        <th>工作年限要求</th>
+                        <th>学历要求</th>
+                        <th>招聘人数</th>
+                        <th>生效日期</th>
+                        <th>失效日期</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{ info.work_experience }}</td>
+                        <td>{{ info.degree }}</td>
+                        <td>
+                            {% if info.recruit_number > 0 %}
+                                {{ info.recruit_number }}
+                            {% else %}
+                                不限
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if info.effective_date %}
+                                {{ info.effective_date|date:"Y M d" }}
+                            {% else %}
+                                无
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if info.uneffective_date %}
+                                {{ info.uneffective_date|date:"Y M d" }}
+                            {% else %}
+                                无
+                            {% endif %}
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
 		</div>
 	   	<div class="row">
-	   		<pre style="background-color:white">{{info.content|striptags}}</pre>
+            <h4>职位要求:</h4>
+            <pre class="bs-callout bs-callout-warning" style="background-color:white">{{info.requirement|striptags}}</pre>
+            <h4>职位描述:</h4>
+	   		<pre class="bs-callout bs-callout-info" style="background-color:white">{{info.description|striptags}}</pre>
 	   	</div>
-	   	
+
 	   	<div class="row">
 	   		<a class="btn btn-default btn-xs pull-right" disabled="disabled">访问次数：{{info.view_times}}</a>
 			<a class="btn btn-default btn-xs pull-right" style="margin-right:5px" disabled="disabled">发布时间：{{info.pub_date|date:"Y M d"}}</a>
